@@ -1106,6 +1106,7 @@ sub get_release_notes {
 sub run_display_release_notes {
     my ($release_notes) = @_;
     output('/tmp/release_notes.html', $release_notes);
+    local $ENV{LC_ALL} = $::o->{locale}{lang} || 'C';
     run_program::raw({ detach => 1 }, '/usr/bin/display_release_notes.pl');
 }
 
