@@ -1,3 +1,6 @@
+- release notes dialog:
+  o fix untranslated button
+
 Version 16.26.4 - 22 January 2014
 
 - debug image:
